--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -85,7 +85,7 @@
     content: "";
     display: block;
     background-repeat: no-repeat;
-    background-image: url("../../img/cat-logo-tablet.svg");
+    background-image: url("../../img/cat-logo-desktop.svg");
     width: 202px;
     height: 59px;
   }
