--- a/source/sass/blocks/background-promo.scss
+++ b/source/sass/blocks/background-promo.scss
@@ -9,11 +9,19 @@
   top: 0;
   height: 302px;
   width: 100%;
-  background-image: url("../../img/promo-background-mini.png");
   background-size: cover;
   z-index: -1;
 
   @media (--narrow-vp) {
+    background-image:
+      linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+      url("../../img/index/index-background-s@1x.webp");
+
+    @media (min-resolution: 2dppx) {
+      background-image:
+        linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+        url("../../img/index/index-background-s@2x.webp");
+    }
     left: 0;
   }
 
@@ -25,11 +33,19 @@
     position: absolute;
     right: 0;
     top: -79px;
-    background-image: url("../../img/promo-background-max.png");
+    background-image:
+      linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+      url("../../img/index/index-background-w@1x.webp");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: 100% 50%;
     max-width: 720px;
     height: 694px;
+
+    @media (min-resolution: 2dppx) {
+      background-image:
+        linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+        url("../../img/index/index-background-w@2x.webp");
+    }
   }
 }
