--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,6 +1,10 @@
 .example {
   position: relative;
-  padding-top: 47px;
+  padding: 47px 0;
+
+  @media (--wide-vp) {
+    padding-bottom: 0;
+  }
 }
 
 .example::after {
@@ -45,9 +49,16 @@
   display: flex;
   flex-direction: column;
 
+  @media (--middle-vp) {
+    gap: 70px;
+    align-items: center;
+  }
+
   @media (--wide-vp) {
     flex-direction: row;
+    justify-content: space-between;
     padding-top: 70px;
+    padding-bottom: 65px;
   }
 }
 
@@ -61,7 +72,7 @@
   }
 
   @media (--wide-vp) {
-    gap: 70px;
+    justify-content: space-between;
     max-width: 436px;
   }
 }
@@ -83,6 +94,15 @@
   line-height: 18px;
   color: var(--base-font-color);
   margin: 0;
+
+  @media (--not-narrow-vp) {
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  @media (--wide-vp) {
+    flex-grow: 1;
+  }
 }
 
 .example__facts-list {
