--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -149,6 +149,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 20px;
+    line-height: 20px;
     max-width: 244px;
     min-height: 54px;
     padding: 0 0;
