--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,23 +1,77 @@
 .slider {
-  max-width: 280px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 277px;
+
+
+  @media (--not-narrow-vp) {
+    height: 576px;
+    width: 592px;
+  }
+}
+
+.slider__text {
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+
+  @media (--not-narrow-vp) {
+    padding: 2px 0;
+    border-bottom: 2px dotted #cdcdcd;
+  }
+}
+
+.slider__range-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  gap: 13px;
+  align-items: center;
+  width: 100%;
+  height: 50px;
 }
 
 .slider__images {
-  position: relative;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  width: 280px;
+
+  @media (--not-narrow-vp) {
+    width: 592px;
+  }
 }
 
 .slider__image {
-  left: 0;
-  width: 100%;
+  height: 232px;
+  position: absolute;
+
+  @media (--not-narrow-vp) {
+    width: 592px;
+    height: 100%;
+  }
 }
 
-.slider__image--was {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  z-index: 1;
-  height: 100%;
+.slider__image--now {
+  right: 0;
+}
+
+.slider__first-image {
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
   width: 100%;
-  object-fit: cover;
-  object-position: 33%;
+  overflow: hidden;
+}
+
+.slider__second-image {
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+  width: 0%;
+  overflow: hidden;
 }
