--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,3 +26,4 @@
 @import "./blocks/catalog-title.scss";
 @import "./blocks/background-promo.scss";
 @import "./blocks/alternative-text-color.scss";
+@import "./blocks/cat-range.scss";
