--- a/source/templates/head.twig
+++ b/source/templates/head.twig
@@ -4,4 +4,5 @@
   <title>{{ pages[pageId].name }} | Кэт энерджи | HTML Academy</title>
   <link rel="stylesheet" href="./css/style.min.css">
   <script src="./js/menu-button.min.js" defer></script>
+  <script src="./js/cat-range.min.js" defer></script>
 </head>
