--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -69,14 +69,14 @@
     background-repeat: no-repeat;
     width: 34px;
     height: 38px;
-    background-image: url("../../img/logo-cat.svg");
+    background-image: url("../../img/logo.svg#cat-logo-icon");
   }
 
   @media (--middle-vp) {
     content: "";
     display: block;
     background-repeat: no-repeat;
-    background-image: url("../../img/cat-logo-tablet.svg");
+    background-image: url("../../img/logo.svg#cat-logo-tablet");
     width: 174px;
     height: 50px;
   }
@@ -85,7 +85,7 @@
     content: "";
     display: block;
     background-repeat: no-repeat;
-    background-image: url("../../img/cat-logo-desktop.svg");
+    background-image: url("../../img/logo.svg#cat-logo-desktop");
     width: 202px;
     height: 59px;
   }
@@ -99,6 +99,6 @@
     width: 101px;
     height: 18px;
     transform: translateX(50%);
-    background-image: url("../../img/logo-words.svg");
+    background-image: url("../../img/logo.svg#cat-logo-words");
   }
 }
