--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -2,7 +2,7 @@
   <div class="page__centerer footer__container">
     <div class="footer__logo-container">
       <a href="index.html" class="footer__logo-link" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
-        <img src="img/logo-words.svg" alt="" class="logo-words">
+        <img src="../img/logo.svg#cat-logo-words" width="128" height="24" alt="" class="logo-words">
       </a>
     </div>
     <div class="social">
