--- a/source/sass/blocks/description.scss
+++ b/source/sass/blocks/description.scss
@@ -52,6 +52,7 @@
   flex-shrink: 0;
   width: 60px;
   height: 60px;
+  background-color: var(--description-icon-bg-color);
   background-repeat: no-repeat;
   background-size: cover;
 
