--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -179,3 +179,11 @@
     margin: 0;
   }
 }
+
+.additional__item-order-button:hover {
+  --button-color: #5eaa2f;
+}
+
+.additional__item-order-button:active {
+  color: rgba(255, 255, 255, 0.3);
+}
