--- a/source/sass/blocks/nutrition-programm.scss
+++ b/source/sass/blocks/nutrition-programm.scss
@@ -120,7 +120,8 @@
 }
 
 .nutrition-programm__link {
-  display: block;
+  display: flex;
+  align-items: center;
   font-family: "Oswald", sans-serif;
   font-size: 16px;
   line-height: 16px;
@@ -128,16 +129,12 @@
   color: #000000;
   text-transform: uppercase;
   text-decoration: none;
+  width: 100%;
   border-top: 1px solid #d9d9d9;
   padding-top: 15px;
 
-  @media (--middle-vp) {
-    font-size: 20px;
-    line-height: 30px;
-    text-align: start;
-  }
-
-  @media (--wide-vp) {
+  @media (--not-narrow-vp) {
+    border-top: none;
     font-size: 20px;
     line-height: 30px;
     text-align: start;
@@ -145,10 +142,11 @@
 }
 
 .nutrition-programm__link::after {
-  content: url("data:image/svg+xml,%3Csvg width='24' height='12' viewBox='0 0 24 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline y1='6' x2='18' y2='6' stroke='black' stroke-width='2'/%3E%3Cpath d='M24 6L17.25 11.1962L17.25 0.803848L24 6Z' fill='black'/%3E%3C/svg%3E%0A");
+  content: "";
   display: inline-block;
   width: 24px;
   height: 12px;
+  background-image: url("data:image/svg+xml,%3Csvg width='24' height='12' viewBox='0 0 24 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline y1='6' x2='18' y2='6' stroke='black' stroke-width='2'/%3E%3Cpath d='M24 6L17.25 11.1962L17.25 0.803848L24 6Z' fill='black'/%3E%3C/svg%3E%0A");
   margin-left: 15px;
 
   @media (--middle-vp) {
@@ -199,4 +197,8 @@
   @media (--wide-vp) {
     margin-left: 28px;
   }
+}
+
+.nutrition-programm__link:active {
+  opacity: 0.3;
 }
