--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -156,3 +156,11 @@
     padding: 0 0;
   }
 }
+
+.promo__button:hover {
+  --button-color: #5eaa2f;
+}
+
+.promo__button:active {
+  color: rgba(255, 255, 255, 0.3);
+}
