--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -12,32 +12,10 @@
   }
 }
 
-.slider__text {
-  font-family: "Oswald", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
-  text-transform: uppercase;
-
-  @media (--not-narrow-vp) {
-    padding: 2px 0;
-    border-bottom: 2px dotted #cdcdcd;
-  }
-}
-
-.slider__range-container {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  gap: 13px;
-  align-items: center;
-  width: 100%;
-  height: 50px;
-}
-
 .slider__images {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   height: 100%;
   width: 280px;
 
