--- a/source/sass/global/common.scss
+++ b/source/sass/global/common.scss
@@ -2,6 +2,7 @@
   --header-background-color-mobile: #ffffff;
   --header-background-color: transparent;
   --base-font-color: #444444;
+  --description-icon-bg-color: #68b738;
   --button-color: #68b738;
   --line-color: #68b738;
   --button-text-color: #ffffff;
@@ -22,4 +23,5 @@
   --product-card-bg-color: #f2f2f2;
   --product-card__item-boreder-color: #cdcdcd;
   --additionals-border-color: #cdcdcd;
+  --show-more-button-color: #f2f2f2;
 }
