--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -2,20 +2,39 @@
   <div class="page__centerer footer__container">
     <div class="footer__logo-container">
       <a href="index.html" class="footer__logo-link" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
-        <img src="../img/logo.svg#cat-logo-words" width="128" height="24" alt="" class="logo-words">
+        <svg width="128" height="24" class="logo-words">
+          <use href="./img/logo.svg#cat-logo-words"></use>
+        </svg>
+        <span class="visually-hidden">логотип кэтенерджи</span>
       </a>
     </div>
     <div class="social">
       <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" target="_blank">
-        <img class="social__image" src="../icons/sprite.svg#vkontakte" alt="Мы в Vk">
+        <svg class="social__icon">
+          <use href="./icons/sprite.svg#vkontakte"></use>
+        </svg>
+        <span class="visually-hidden">Мы в vk</span>
       </a>
       <a class="social__link social__link--instagram" href="https://instagram.com/htmlacademy/" target="_blank">
-        <img class="social__image" src="../icons/sprite.svg#instagram" alt="Мы в instagram">
+        <svg class="social__icon">
+          <use href="./icons/sprite.svg#instagram"></use>
+        </svg>
+        <span class="visually-hidden">Мы в instagram</span>
       </a>
       <a class="social__link social__link--facebook" href="https://facebook.com/htmlacademy" target="_blank">
-        <img class="social__image" src="../icons/sprite.svg#facebook" alt="Мы в facebook">
+        <svg class="social__icon">
+          <use href="./icons/sprite.svg#facebook"></use>
+        </svg>
+        <span class="visually-hidden">Мы в facebook</span>
       </a>
     </div>
-    <div class="htmlacademy-logo"><a href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">HtmlAcademy</a></div>
+    <div class="htmlacademy-logo">
+      <a href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">
+        HtmlAcademy
+        <svg class="htmlacademy-logo__icon">
+          <use href="../icons/sprite.svg#htmlacademy"></use>
+        </svg>
+      </a>
+    </div>
   </div>
 </footer>
