--- a/source/templates/head.twig
+++ b/source/templates/head.twig
@@ -2,6 +2,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ pages[pageId].name }} | Кэт энерджи | HTML Academy</title>
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/favicon-svg.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/apple.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="./css/style.min.css">
   <script src="./js/menu-button.min.js" defer></script>
   <script src="./js/cat-range.min.js" defer></script>
