--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -29,12 +29,7 @@
       </a>
     </div>
     <div class="htmlacademy-logo">
-      <a href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">
-        HtmlAcademy
-        <svg class="htmlacademy-logo__icon">
-          <use href="../icons/sprite.svg#htmlacademy"></use>
-        </svg>
-      </a>
+      <a href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">HtmlAcademy</a>
     </div>
   </div>
 </footer>
