--- a/source/sass/blocks/nutrition-programm.scss
+++ b/source/sass/blocks/nutrition-programm.scss
@@ -146,7 +146,10 @@
   display: inline-block;
   width: 24px;
   height: 12px;
-  background-image: url("data:image/svg+xml,%3Csvg width='24' height='12' viewBox='0 0 24 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline y1='6' x2='18' y2='6' stroke='black' stroke-width='2'/%3E%3Cpath d='M24 6L17.25 11.1962L17.25 0.803848L24 6Z' fill='black'/%3E%3C/svg%3E%0A");
+  background-image: url("../../icons/sprite.svg#arrow-active");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   margin-left: 15px;
 
   @media (--middle-vp) {
