--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,3 +27,4 @@
 @import "./blocks/background-promo.scss";
 @import "./blocks/alternative-text-color.scss";
 @import "./blocks/cat-range.scss";
+@import "./blocks/map.scss";
