--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -9,19 +9,19 @@
       </a>
     </div>
     <div class="social">
-      <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" target="_blank">
+      <a rel="noopener" class="social__link social__link--vk" href="https://vk.com/htmlacademy" target="_blank">
         <svg class="social__icon">
           <use href="./icons/sprite.svg#vkontakte"></use>
         </svg>
         <span class="visually-hidden">Мы в vk</span>
       </a>
-      <a class="social__link social__link--instagram" href="https://instagram.com/htmlacademy/" target="_blank">
+      <a rel="noopener" class="social__link social__link--instagram" href="https://instagram.com/htmlacademy/" target="_blank">
         <svg class="social__icon">
           <use href="./icons/sprite.svg#instagram"></use>
         </svg>
         <span class="visually-hidden">Мы в instagram</span>
       </a>
-      <a class="social__link social__link--facebook" href="https://facebook.com/htmlacademy" target="_blank">
+      <a rel="noopener" class="social__link social__link--facebook" href="https://facebook.com/htmlacademy" target="_blank">
         <svg class="social__icon">
           <use href="./icons/sprite.svg#facebook"></use>
         </svg>
@@ -29,7 +29,7 @@
       </a>
     </div>
     <div class="htmlacademy-logo">
-      <a href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">HtmlAcademy</a>
+      <a rel="noopener" href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">HtmlAcademy</a>
     </div>
   </div>
 </footer>
