--- a/source/templates/head.twig
+++ b/source/templates/head.twig
@@ -7,6 +7,11 @@
   <link rel="apple-touch-icon" href="./favicons/favicon-apple.png">
   <link rel="manifest" href="./manifest.webmanifest">
   <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="preload" href="./css/style.min.css" as="style">
+  <link rel="preload" href="./fonts/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <script src="./js/menu-button.min.js" defer></script>
-  <script src="./js/cat-range.min.js" defer></script>
+  {% if permalink == "index.html" %}
+    <script src="./js/cat-range.min.js" defer></script>
+  {% endif %}
 </head>
