--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,7 +1,7 @@
 <div class="page__centerer">
   <header class="header">
     <div class="header__logo-container">
-      <a href="index.html" class="header__logo-link" {% if permalink == "index.html" %}aria-current="page"{% endif %}></a>
+      <a href="index.html" class="header__logo-link" {% if permalink == "index.html" %}aria-current="page"{% endif %}><span class="visually-hidden">Перейти на главную</span></a>
     </div>
     <nav class="navigation navigation--closed  navigation--nojs">
       <button class="navigation__menu-button" type="button">
