--- a/source/templates/contacts.twig
+++ b/source/templates/contacts.twig
@@ -4,4 +4,6 @@
     <p class="contacts__lead-text">приглашаем<br>к&nbsp;сотрудничеству<br>дилеров!</p>
     <p class="contacts__adress">ул. Большая<br>Конюшенная, д. 19/8 <span class="contacts__adress-city">Санкт-Петербург</span></p>
   </div>
+  <iframe class="contacts__map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ac17026e0183ea3a65e599f68834bca86394c52e2ca6f560e5f0c0c1af66fc19f&amp;source=constructor" ></iframe>
+  <span class="visually-hidden">Местонахождение магазина CatEnergy</span>
 </section>
