--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -46,6 +46,10 @@
   display: flex;
   flex-direction: column;
 
+  @media (--narrow-vp) {
+    padding-top: 25px;
+  }
+
   @media (--middle-vp) {
     gap: 70px;
     align-items: center;
@@ -62,7 +66,7 @@
 .example__facts {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 70px;
 
   @media (--middle-vp) {
     gap: 54px;
@@ -82,6 +86,15 @@
   color: #000000;
   padding-bottom: 20px;
   margin: 0;
+
+  @media (--not-narrow-vp) {
+    font-size: 60px;
+    line-height: 60px;
+  }
+
+  @media (--wide-vp) {
+    flex-grow: 1;
+  }
 }
 
 .example__text {
@@ -95,10 +108,6 @@
   @media (--not-narrow-vp) {
     font-size: 16px;
     line-height: 24px;
-  }
-
-  @media (--wide-vp) {
-    flex-grow: 1;
   }
 }
 
