--- a/source/sass/blocks/htmlacademy-logo.scss
+++ b/source/sass/blocks/htmlacademy-logo.scss
@@ -1,5 +1,7 @@
 .htmlacademy-logo {
   --footer-logo-color: #666666;
+  display: flex;
+  align-items: center;
   flex-grow: 1;
   border-top: 1px solid #d9d9d9;
 
