--- a/source/sass/global/common.scss
+++ b/source/sass/global/common.scss
@@ -24,4 +24,5 @@
   --product-card__item-boreder-color: #cdcdcd;
   --additionals-border-color: #cdcdcd;
   --show-more-button-color: #f2f2f2;
+  --index-background-base-color: #68b738;
 }
