--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -4,6 +4,7 @@
   grid-template-columns: 1fr 1fr;
   box-sizing: border-box;
   align-items: center;
+  z-index: 10;
 
   @media (--narrow-vp) {
     background-color: var(--header-background-color-mobile);
