--- a/source/templates/contacts.twig
+++ b/source/templates/contacts.twig
@@ -5,5 +5,15 @@
     <p class="contacts__adress">ул. Большая<br>Конюшенная, д. 19/8 <span class="contacts__adress-city">Санкт-Петербург</span></p>
   </div>
   <iframe class="contacts__map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ac17026e0183ea3a65e599f68834bca86394c52e2ca6f560e5f0c0c1af66fc19f&amp;source=constructor" ></iframe>
-  <span class="visually-hidden">Местонахождение магазина CatEnergy</span>
+  <div class="contacts__map contacts__map--noscript">
+    {{macros.picture(
+      "contacts__map-image",
+      "./img/location/",
+      "location",
+      "png",
+      "Местонахождение CatEnergy",
+      "320",
+      "362"
+    )}}
+  </div>
 </section>
