--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -23,7 +23,7 @@
 }
 
 .page__form-title {
-  font-family: "Oswald", sans-serif;
+  font-family: var(--accent-font);
   font-size: 36px;
   line-height: 36px;
   font-weight: 400;
