--- a/source/sass/global/common.scss
+++ b/source/sass/global/common.scss
@@ -25,4 +25,5 @@
   --additionals-border-color: #cdcdcd;
   --show-more-button-color: #f2f2f2;
   --index-background-base-color: #68b738;
+  --focus-border-color: #444444;
 }
