--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -60,7 +60,7 @@
 }
 
 .additional__title-text {
-  font-family: "Oswald", sans-serif;
+  font-family: var(--accent-font);
   font-size: 24px;
   line-height: 24px;
   font-weight: 400;
@@ -125,7 +125,7 @@
 
 .additional__item-name {
   grid-column: 1/-1;
-  font-family: "Oswald", sans-serif;
+  font-family: var(--accent-font);
   font-size: 16px;
   line-height: 16px;
   text-transform: uppercase;
@@ -145,7 +145,7 @@
 
 .additional__item-unit,
 .additional__item-price {
-  font-family: "Arial", sans-serif;
+  font-family: var(--main-font);
   font-size: 14px;
   line-height: 14px;
   color: var(--base-font-color);
@@ -163,7 +163,7 @@
 
 .additional__item-order-button {
   grid-column: 1/-1;
-  font-family: "Oswald", sans-serif;
+  font-family: var(--accent-font);
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
@@ -172,6 +172,7 @@
   text-align: center;
   padding: 10px;
   background-color: var(--button-color);
+  outline: none;
 
   @media (--wide-vp) {
     grid-column: 4/5;
@@ -185,4 +186,8 @@
 
 .additional__item-order-button:active {
   color: rgba(255, 255, 255, 0.3);
+}
+
+.additional__item-order-button:focus-visible {
+  box-shadow: inset 0 0 0 1px var(--focus-border-color);
 }
