--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -163,7 +163,7 @@
 }
 
 .example__facts-item-fact {
-  font-family: "Oswald", sans-serif;
+  font-family: var(--accent-font);
   font-size: 24px;
   line-height: 24px;
   color: #000000;
@@ -179,7 +179,7 @@
 .example__facts-item-explanation {
   position: relative;
   box-sizing: border-box;
-  font-family: "Arial", sans-serif;
+  font-family: var(--main-font);
   font-size: 12px;
   line-height: 12px;
   color: var(--base-font-color);
@@ -232,7 +232,7 @@
 
 .example__facts-item-fact--spending,
 .example__facts-item-explanation--spending {
-  font-family: "Oswald", sans-serif;
+  font-family: var(--accent-font);
   font-size: 14px;
   line-height: 20px;
   color: #000000;
