--- a/source/sass/blocks/form-cat-program.scss
+++ b/source/sass/blocks/form-cat-program.scss
@@ -91,7 +91,7 @@
 }
 
 .form-cat-program__button {
-  font-family: "Oswald", sans-serif;
+  font-family: var(--accent-font);
   font-size: 16px;
   line-height: 20px;
   font-weight: 400;
@@ -114,24 +114,6 @@
 
 .form-cat-program__button:active {
   color: rgba(255, 255, 255, 0.3);
-}
-
-
-.inputs-group__comment {
-  box-sizing: border-box;
-  width: 100%;
-  min-height: 150px;
-  padding: 10px 19px;
-  border: 1px solid var(--input-border-color);
-}
-
-.inputs-group__comment::placeholder {
-  font-family: "Oswald", sans-serif;
-  font-size: 16px;
-  line-height: 18px;
-  font-weight: 400;
-  color: var(--base-font-color);
-  text-transform: uppercase;
 }
 
 .form-cat-program__requireds-description {
