--- a/source/sass/blocks/inputs-group.scss
+++ b/source/sass/blocks/inputs-group.scss
@@ -140,7 +140,7 @@
   gap: 13px;
   flex-shrink: 0;
   flex-grow: 1;
-  font-family: "Oswald", sans-serif;
+  font-family: var(--accent-font);
   font-size: 16px;
   line-height: 18px;
   font-weight: 400;
@@ -156,7 +156,7 @@
 
 .inputs-group__input {
   flex-grow: 1;
-  font-family: "Oswald", sans-serif;
+  font-family: var(--accent-font);
   font-size: 16px;
   line-height: 18px;
   font-weight: 400;
@@ -164,7 +164,8 @@
   text-transform: uppercase;
   min-height: 46px;
   outline: none;
-  border: 1px solid var(--input-border-color);
+  border: none;
+  box-shadow: inset 0 0 0 1px var(--input-border-color);
   padding: 0 15px;
   overflow: hidden;
   appearance: none;
@@ -179,9 +180,9 @@
   --input-border-color: #cdcdcd;
 }
 
-.inputs-group__input:focus {
-  --input-border-color: #444444;
-  border: 2px solid var(--input-border-color);
+.inputs-group__input:focus-visible {
+  box-shadow: inset 0 0 0 2px var(--focus-border-color);
+  outline: none;
 
   & + .inputs-group__contacts-icon {
     stroke: #68b738;
@@ -189,13 +190,32 @@
   }
 }
 
-.inputs-group__input:invalid {
-  --input-border-color: #ff8282;
-  border: 2px solid var(--input-border-color);
+.inputs-group__comment:focus-visible {
+  box-shadow: inset 0 0 0 2px var(--focus-border-color);
+  outline: none;
+}
 
-  & + .inputs-group__contacts-icon {
-    stroke: #ff8282;
-    fill: #ff8282;
+@supports selector(:user-invalid) {
+  .inputs-group__input:user-invalid {
+    --input-border-color: #ff8282;
+    box-shadow: inset 0 0 0 2px  var(--input-border-color);
+
+    & + .inputs-group__contacts-icon {
+      stroke: #ff8282;
+      fill: #ff8282;
+    }
+  }
+}
+
+@supports not selector(:user-invalid) {
+  .inputs-group__input:invalid {
+    --input-border-color: #ff8282;
+    box-shadow: inset 0 0 0 2px  var(--input-border-color);
+
+    & + .inputs-group__contacts-icon {
+      stroke: #ff8282;
+      fill: #ff8282;
+    }
   }
 }
 
@@ -223,10 +243,29 @@
   }
 }
 
+.inputs-group__comment {
+  box-sizing: border-box;
+  width: 100%;
+  min-height: 150px;
+  padding: 10px 19px;
+  border: none;
+  outline: none;
+  box-shadow: inset 0 0 0 1px var(--input-border-color);
+}
+
+.inputs-group__comment::placeholder {
+  font-family: var(--accent-font);
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 400;
+  color: var(--base-font-color);
+  text-transform: uppercase;
+}
+
 .inputs-group__group-title {
   --title-indent: 20px;
   position: relative;
-  font-family: "Oswald", sans-serif;
+  font-family: var(--accent-font);
   font-size: 24px;
   line-height: 26px;
   font-weight: 400;
@@ -300,6 +339,10 @@
   --mark-border-color: #bababa;
 }
 
+.inputs-group__input-radio:focus-visible + .inputs-group__input-label {
+  box-shadow: inset 0 0 0 2px var(--focus-border-color);
+}
+
 .inputs-group__input-checkbox:checked + .inputs-group__input-label::before {
   content: "";
   display: block;
@@ -323,4 +366,8 @@
 
 .inputs-group__input-checkbox ~ .inputs-group__input-label:hover {
   --mark-border-color: #bababa;
+}
+
+.inputs-group__input-checkbox:focus-visible + .inputs-group__input-label {
+  box-shadow: inset 0 0 0 2px var(--focus-border-color);
 }
