--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -35,6 +35,12 @@
 .product-card__specification-link {
   text-decoration: none;
   text-align: center;
+  border-bottom: 1px solid transparent;
+  outline: none;
+}
+
+.product-card__specification-link:focus-visible {
+  border-bottom: 1px solid var(--focus-border-color);
 }
 
 .product-card__items {
@@ -62,7 +68,7 @@
   flex-direction: column;
   justify-content: space-between;
   gap: 18px;
-  font-family: "Arial", sans-serif;
+  font-family: var(--main-font);
   font-size: 12px;
   line-height: 16px;
   color: var(--base-font-color);
@@ -75,7 +81,7 @@
 .product-card__button {
   grid-column: 1/-1;
   box-sizing: border-box;
-  font-family: "Oswald", sans-serif;
+  font-family: var(--accent-font);
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
@@ -87,6 +93,7 @@
   width: 100%;
   background-color: var(--button-color);
   padding: 10px;
+  outline: none;
 }
 
 .product-card__button:hover {
@@ -97,14 +104,18 @@
   color: rgba(255, 255, 255, 0.3);
 }
 
+.product-card__button:focus-visible {
+  box-shadow: inset 0 0 0 1px var(--focus-border-color);
+}
 
 .product-card__item-value {
   text-align: right;
 }
 
 .product-card__title {
+  display: block;
   grid-column: 1/-1;
-  font-family: "Oswald", sans-serif;
+  font-family: var(--accent-font);
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
@@ -156,5 +167,15 @@
     transform: translateX(-50%);
     width: 172px;
     height: 200px;
+  }
+}
+
+.product-card:nth-child(even) .product-card__image {
+  @media (--middle-vp) {
+    bottom: 315px;
+  }
+
+  @media (--wide-vp) {
+    bottom: 320px;
   }
 }
