--- a/source/sass/blocks/request-to-user.scss
+++ b/source/sass/blocks/request-to-user.scss
@@ -1,5 +1,5 @@
 .request-to-user {
-  font-family: "Oswald", sans-serif;
+  font-family: var(--accent-font);
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
