--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -3,7 +3,7 @@
     <div class="header__logo-container">
       <a href="index.html" class="header__logo-link" {% if permalink == "index.html" %}aria-current="page"{% endif %}><span class="visually-hidden">Перейти на главную</span></a>
     </div>
-    <nav class="navigation navigation--closed  navigation--nojs">
+    <nav class="navigation navigation--nojs">
       <button class="navigation__menu-button" type="button">
         <span class="visually-hidden">Кнопка вызова меню</span>
       </button>
