--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -29,7 +29,7 @@
       </a>
     </div>
     <div class="htmlacademy-logo">
-      <a rel="noopener" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" class="htmlacademy-logo__link">HtmlAcademy</a>
+      <a rel="noopener" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" class="htmlacademy-logo__link"><span class="visually-hidden">HtmlAcademy</span></a>
     </div>
   </div>
 </footer>
