--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -76,6 +76,9 @@
 
   @media (--not-narrow-vp) {
     transform: none;
+    gap: 10px;
+    max-width: 610px;
+    flex-wrap: wrap;
   }
 
   @media (--middle-vp) {
