--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,7 +1,16 @@
 <div class="page__centerer">
   <header class="header">
     <div class="header__logo-container">
-      <a href="index.html" class="header__logo-link" {% if permalink == "index.html" %}aria-current="page"{% endif %}><span class="visually-hidden">Перейти на главную</span></a>
+      <a href="index.html" class="header__logo-link" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
+        <picture>
+          <source type="image/svg+xml" srcset="./img/logo/logo-desktop.svg" media="(min-width: 1439px)">
+          <source type="image/svg+xml" srcset="./img/logo/logo-tablet.svg" media="(min-width: 768px) and (max-width: 1439px)">
+          <source type="image/svg+xml" srcset="./img/logo/logo-mobile.svg" media="(max-width: 767px)">
+          <img src="./img/logo/logo-mobile.svg" alt="Перейти на главную интернет-магазина CatEnergy" class="header__logo-icon" width="34" height="38">
+        </picture>
+        <img src="./img/logo/logo-words.svg" alt="Перейти на главную интернет-магазина CatEnergy" class="header__logo-word" width="101" height="19">
+        <span class="visually-hidden">Перейти на главную</span>
+      </a>
     </div>
     <nav class="navigation navigation--nojs">
       <button class="navigation__menu-button" type="button">
