--- a/source/sass/blocks/background-promo.scss
+++ b/source/sass/blocks/background-promo.scss
@@ -5,6 +5,7 @@
 
   @media (--not-narrow-vp) {
     --background-height: 694px;
+    position: static;
   }
 }
 
@@ -14,7 +15,7 @@
     position: absolute;
     display: block;
     width: 50%;
-    top: -112px;
+    top: 0;
     height: var(--background-height);
     right: 0;
     z-index: 0;
@@ -62,7 +63,7 @@
   @media (--wide-vp) {
     position: absolute;
     right: 0;
-    top: -112px;
+    top: 0;
     background:
       right/ contain no-repeat url("../../img/index/index-background-l@1x.webp"),
       left/ cover linear-gradient(var(--back-cat-color), var(--back-cat-color));
