--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -5,6 +5,7 @@
   align-items: center;
   padding: 0 73px;
   flex-grow: 1;
+  flex-wrap: wrap;
   border-top: 1px solid #d9d9d9;
 
   @media (--middle-vp) {
