--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -2,10 +2,9 @@
   <div class="page__centerer footer__container">
     <div class="footer__logo-container">
       <a href="index.html" class="footer__logo-link" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
-        <svg width="128" height="24" class="logo-words">
-          <use href="./img/logo.svg#cat-logo-words"></use>
+        <svg role="img" aria-label="Перейти на главную интернет-магазин КетЭнерджи" width="128" height="24" class="logo-words">
+          <use aria-hidden="true" href="./img/logo.svg#cat-logo-words"></use>
         </svg>
-        <span class="visually-hidden">логотип кэтенерджи</span>
       </a>
     </div>
     <div class="social">
