--- a/source/templates/head.twig
+++ b/source/templates/head.twig
@@ -11,6 +11,7 @@
   <link rel="preload" href="./fonts/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <script src="./js/menu-button.min.js" defer></script>
   <script src="./js/map.min.js" defer></script>
+  <script src="./js/nojs.min.js" defer></script>
   {% if permalink == "index.html" %}
     <script src="./js/cat-range.min.js" defer></script>
   {% endif %}
